# dobby

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/automations/: daily-telegram-message.toml  dobby-wiki-maintenance.toml  download-handle-telegram-messages.toml
deployment/: README.md  setup_obsidian_local_rest.py
dobby_app/: __init__.py  bot_commands.py  caldav_client.py  calendar_service.py  command_calendar.py  command_jobs.py  commands.py  config.py  context_templates.py  daily_briefing.py  db.py  execution_results.py  executioner_agent.py  job_repository.py  jobs.py  llm_client.py  logging_config.py  main.py  memory_agent.py  message_handler.py  models.py  obsidian_client.py  planner_runner.py  poller.py  queueing.py  router.py  runtime_status.py  scheduler.py  schedules.py  seed.py  telegram_cli.py  telegram_client.py  telegram_history.py  timeparse.py  tool_executors.py  transcription.py  wiki_memory.py  wiki_service.py  worker.py
dobby_app/assistant/: executioner_agent.py  (+6 more)
scripts/: calendar_preflight.sh  ical.sh  rem.sh  reminders_preflight.sh
telegram_bot_cli/: README.md  telegram_app.py
tests/: conftest.py  test_commands.py  test_config.py  test_executioner_agents.py  test_job_tools.py  test_jobs.py  test_memory.py  test_memory_agent.py  test_memory_notes.py  test_message_handler.py  test_obsidian_client.py  test_router.py  test_runtime_status.py  test_schedules.py  test_seed.py  test_telegram_formatting.py  test_wiki_memory.py
wiki/: index.md  log.md
(+135 files in other folders)
