[project]
name = "dobby"
version = "0.1.0"
description = "DOBBY VPS Telegram assistant with CalDAV reminders and configurable jobs."
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.6,<4",
  "alembic>=1.13,<2",
  "apscheduler>=3.10,<4",
  "caldav>=1.3,<2",
  "dateparser>=1.2,<2",
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "icalendar>=5.0,<6",
  "openai>=1.35,<2",
  "psycopg[binary]>=3.1,<4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "python-multipart>=0.0.9,<1",
  "redis>=5,<6",
  "rq>=1.16,<2",
  "sqlalchemy>=2.0,<3",
  "tomli>=2.0,<3; python_version<'3.11'",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
dobby-telegram-cli = "dobby_app.telegram_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["dobby_app*"]

[tool.setuptools.package-data]
dobby_app = ["context/*.md", "context/tools/*.md"]
